Update girlfriend's name on the certificate

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ button:hover {
 <div class="certificate">
 <h1>🏆 Best Girlfriend Award 🏆</h1>
 <p>This certificate is proudly presented to</p>
-<h2>💖 YOUR_GIRL_NAME 💖</h2>
+<h2>💖 Rennie 💖</h2>
 <p>For being the strongest, cutest, and most amazing girl in my life.</p>
 <p>I love you more than words, more than code, more than WiFi 😘</p>
 <p><b>Happy Valentine's Day ❤️</b></p>
