--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <!-- Hero Section -->
     <div class="hero">
-        <img src="assets/hero.jpg" alt="Our Photo">
+        <img src="Assets/hero.jpg" alt="Our Photo">
         <div class="hero-text">
             <h1>Happy Valentine’s Day Rennie 💖</h1>
             <div id="countdown"></div>
@@ -71,3 +71,4 @@
 
 </body>
 </html>
+
