--- a/index.html
+++ b/index.html
@@ -28,11 +28,14 @@
 
 <!-- Secure Unlock -->
 <section id="unlock" class="hidden">
-    <h2>🔐 Private Access</h2>
-    <input type="password" id="passcode" placeholder="Enter Our Secret">
-    <button onclick="checkPass()">Unlock</button>
-    <p id="error"></p>
+    <div class="unlock-box">
+        <h2>🔐 Private Access</h2>
+        <input type="password" id="passcode" placeholder="Enter Our Secret">
+        <button onclick="checkPass()">Unlock</button>
+        <p id="error"></p>
+    </div>
 </section>
+
 
 <!-- Main Experience -->
 <section id="main" class="hidden">
@@ -71,4 +74,5 @@
 
 </body>
 </html>
+
 
