--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
     <div id="main-content" style="display: none;">
         <!-- Main content including certificate and images go here -->
     </div>
+    <div id="certificate">
+    <h2>The Best Girlfriend Award</h2>
+    <p>This certificate is awarded to Rennie</p>
+    <p>For being an amazing girlfriend.</p>
+</div>
     <script src="script.js"></script>
 </body>
 </html>
+
