--- a/index.html
+++ b/index.html
@@ -20,7 +20,19 @@
     <p>This certificate is awarded to Rennie</p>
     <p>For being an amazing girlfriend.</p>
 </div>
+    <section id="hero">
+    <div class="hero-content">
+        <h1>Happy Valentine’s Day, Rennie!</h1>
+        <p>Signed: Pyae Sone Aung</p>
+    </div>
+</section>
+<div id="countdown">
+    <h2>Valentine's Day Countdown</h2>
+    <div id="timer"></div>
+</div>
+
     <script src="script.js"></script>
 </body>
 </html>
+
 
