--- a/index.html
+++ b/index.html
@@ -30,9 +30,12 @@
     <h2>Valentine's Day Countdown</h2>
     <div id="timer"></div>
 </div>
+<canvas id="confetti"></canvas>
+<script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.4.0/dist/confetti.browser.min.js"></script>
 
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
